@startuml
class Article{
  title: String
  content: String
  author: User
  createdAt: LocalDateTime
  updatedAt: LocalDateTime
  photos: List<Photo>
}

class Location {
  country: String
  city: String
  zipcode: String
}

class User {
  Long id
  String email
  String password
  Enum userRole
  String firstName
  String lastName (optional)
  Photo profilePicture
  ContactInfo contactInfo
  List<Ad> favorites
  Location location;
  DateTime createdAt
  DateTime updatedAt
}

class ContactInfo{
  String phone
}


class Ad {
  Long id
  User author
  String title
  String description
  BigDecimal price
  List<Photo> photos
  Photo thumbnail
  Category category
  List<AdAttribute> adAttributes
  Location location;
  Date createdAt
  Date updatedAt
}

class Attribute {
  Long id
  String name
  String valueType (enum)
}

class Category {
  Long id
  String name
  List<Attribute> attributes
}

class Photo {
  Long id
  String filename
  PhotoMetadata metadata
}

class PhotoMetadata {
  Long id
  Integer width
  Integer height
  String extension
  Float size
}

class AdAttribute {
  Long id
  Long adId
  Long attributeId
  String value
}


Ad "1" -- "*" Photo
Ad "1" -- "1" Category
User "1" -- "*" Ad
PhotoMetadata "1" -- "1" Photo
User "1" -- "*" Photo
Attribute "*" -- "*" Category
User "1" -- "1" ContactInfo
Ad "*" -- "*" AdAttribute
Attribute "*" -- "*" AdAttribute
@enduml
